--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.29)
 project(SYSC4001_A1)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(SYSC4001_A1 main.cpp)
+add_executable(SYSC4001_A1 interrupts.cpp)
